--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 		<title>Circle Solver</title>
+		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimum-scale=1, maximum-scale=1"/>	
 		<link rel="stylesheet" type="text/css" href="style.css" />
         <script src="third-party/react.js"></script>
